<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.codehaus.plexus</groupId>
    <artifactId>plexus-compilers</artifactId>
    <version>2.13.1-SNAPSHOT</version>
  </parent>

  <artifactId>plexus-compiler-javac-errorprone</artifactId>

  <name>Plexus Javac+error-prone Component</name>
  <description>Javac Compiler support for Plexus Compiler component,
    with error-prone static analysis checks enabled.
    See https://errorprone.info
  </description>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-utils</artifactId>
    </dependency>
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-compiler-javac</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.errorprone</groupId>
      <artifactId>error_prone_core</artifactId>
      <version>${errorprone.version}</version>
    </dependency>
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-component-annotations</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
            --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
            --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
